# MicroGrid

./: .env.example  .gitignore  PROJECT_SUMMARY.md  README.md  app.py  config.py  main.py  models.py  pyproject.toml  requirements.txt
database/: schema.sql
documentation/: ER_Diagram.md  SETUP.md  Screenshots.md  URS.md
screenshots/: .gitkeep
static/css/: style.css
static/js/: script.js
templates/: base.html  index.html
templates/auth/: login.html  signup.html
templates/errors/: 404.html  500.html
templates/locations/: form.html  list.html
templates/maintenance/: form.html  list.html
templates/readings/: form.html  list.html
templates/reports/: index.html
templates/sensor_types/: form.html  list.html
templates/sensors/: form.html  list.html  readings.html
templates/technicians/: form.html  list.html
