[project]
name = "microgrid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cffi==2.0.0",
    "cryptography==41.0.7",
    "dnspython==2.8.0",
    "dotenv>=0.9.9",
    "email-validator==2.1.1",
    "flask==3.1.2",
    "flask-login==0.6.3",
    "flask-sqlalchemy==3.1.1",
    "idna==3.11",
    "pycparser==2.23",
    "pymysql==1.1.0",
    "python-dotenv==1.1.1",
    "sqlalchemy==2.0.44",
    "typing-extensions==4.15.0",
    "werkzeug==3.1.3",
]
